eclat-compiler/tests/bad/main/t2.ecl

let main f = 
  f 42 ;;

   (* =================
   $ ./eclat tests/bad/main/t2.ecl
     Error: The type of the program input should be a basic type. 
   ==================== *)